# claude-agent-orchestrator

./: .gitignore  CLAUDE.md  README.md  action.yml  pyproject.toml
.github/workflows/: benchmark.yml  review.yml
benchmarks/: baseline.json  run_benchmark.py
docs/: ARCHITECTURE.md
examples/: demo_pipeline.py
src/orchestrator/: __init__.py  ci.py  orchestrator.py  pipeline.py  review.py
src/orchestrator/agents/: acquisition.py  architect.py  developer.py  qa.py  reporting.py
src/orchestrator/core/: agent_base.py  agent_manager.py  communication.py  data_handler.py  logging_monitor.py
src/orchestrator/models/: config.py  messages.py  state.py
tests/: conftest.py  test_agent_manager.py  test_ci.py  test_communication.py  test_data_handler.py  test_event_log.py  test_pipeline.py  test_review.py
tests/test_agents/: test_acquisition.py  test_architect.py  test_developer.py  test_qa.py  test_reporting.py
